# personal-career-agent

./: .gitignore  README.md  app.py  main.py  pyproject.toml  requirements.txt  vectordb.py
.github/workflows/: main.yml
me/: Profile.txt
